EVALSYS-1285 Added IE9 specific CSS to fix scale number alignment
git-svn-id: https://source.sakaiproject.org/contrib/evaluation/branches/unicon-ucb@80660 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/tool/src/webapp/content/css/evaluation_base.css
+++ b/tool/src/webapp/content/css/evaluation_base.css
@@ -1852,11 +1852,14 @@ table#user-perms-table td.userPerms > span:nth-child(2n) {
   font-size: 12px !important;
   line-height: 100%;
   text-align: center;
+  padding: 0 18px\9;
+  width: 15px\9;
 }
 .evaluation .item-group .response-scale-na {
   margin-right: 11px;
   width: 24px;
   padding: 0 13px;
+  padding-right: 18px\9;
 }
 .evaluation .item-group .item .matrix {
   padding-top: 8px;
